2023-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Correct URL for codecov.io badge

2022-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update one URL
	* R/formats.R: Update URL to RFC3339
	* man/iso8601.Rd: Idem

2022-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add total downloads badge

2021-11-04  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* anytime.Rproj: Removed

2021-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (sformats): Support additional formats that are
	dot-sepatated such as '%Y.%m.%d' and variants

	* R/anytime.R: Add a 'see also' link to 'getFormats'
	* man/anytime.Rd: Ditto

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input

2021-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): List GitHub repo and package page

2021-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* .editorconfig: Added
	* README.md: Expanded list of packages using anytime

2021-03-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (anytime_cpp): In case of a logical input vector,
	error out with message
	* inst/tinytest/test_all_formats.R: Add simple tests

2020-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Rename job from build to ci

2020-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Small tweaks to CI YAML file

2020-12-10  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-11-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Use renamed r-ci repository URL
